--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>org.brutusin</groupId>
     <artifactId>instrumentation</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Extensible java agent framework to instrument programs running on the JVM</description>
     <url>https://github.com/brutusin/instrumentation</url>
@@ -27,7 +27,7 @@
         <url>https://github.com/brutusin/instrumentation</url>
         <connection>scm:git:https://github.com/brutusin/instrumentation.git</connection>
         <developerConnection>scm:git:https://github.com/brutusin/instrumentation.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v1.0.0</tag>
     </scm>
     
     <dependencies>
